Changed project settings and dummy scene text

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=87416CBA45F2B02663B3B89DFF22AF2D
-ProjectName=First Person BP Game Template
+ProjectName=FireWarriorUnofficialRemaster
+CompanyName=Jengario
+Description=Unofficial Fire Warrior Remaster
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
