Added temporaroy Pulse Rifle Model and preliminary weapon materials
Added temporaroy Pulse Rifle Model and preliminary weapon materials

--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -44,9 +44,12 @@ TunnelMulticastEndpoint=
 [/Script/LuminPlatformEditor.MagicLeapSDKSettings]
 MLSDKPath=(Path="")
 
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
+
 [WindowsApplication.Accessibility]
 StickyKeysHotkey=False
-ToggleKeysHotkey=True
+ToggleKeysHotkey=False
 FilterKeysHotkey=False
 StickyKeysConfirmation=False
 ToggleKeysConfirmation=False
