--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -115,11 +115,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=340.000
-WindowSize=X=1283.333 Y=723.333
+WindowSize=X=1286.000 Y=726.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -147,7 +147,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/FireWarrior/Weapons/PulseRifle/Materials
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1041,6 +1041,12 @@ SceneOutliner.TimeStamp=2020.08.25-23.22.18
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2020.08.25-23.21.38
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2020.08.25-23.21.05
+BlueprintGraph.LastCompileMethod=Unknown
+Voice.TimeStamp=2020.08.25-23.23.01
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2020.08.25-23.21.59
+MovieSceneCapture.LastCompileMethod=Unknown
 
 [PlacementMode]
 RecentlyPlaced=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin.SK_Mannequin;
