Added Steel material

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -115,11 +115,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=340.000
-WindowSize=X=1310.000 Y=750.000
+WindowSize=X=1313.333 Y=753.333
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
